Add Hall of Fame nomination link to header

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -8,7 +8,8 @@ const navItems = [
       { title: "Mission", href: "#mission" },
       { title: "Board of Directors", href: "/board" },
       { title: "Advisory Board", href: "/advisory-board" },
-      { title: "Hall of Fame", href: "/hall-of-fame" }
+      { title: "Hall of Fame", href: "/hall-of-fame" },
+      { title: "Hall of Fame Nomination", href: "/hall-of-fame-nomination" }
     ]
   },
   {
