Update header menu structure

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -8,8 +8,7 @@ const navItems = [
       { title: "Mission", href: "#mission" },
       { title: "Board of Directors", href: "/board" },
       { title: "Advisory Board", href: "/advisory-board" },
-      { title: "Hall of Fame", href: "/hall-of-fame" },
-      { title: "Hall of Fame Nomination", href: "/hall-of-fame-nomination" }
+      { title: "Hall of Fame", href: "/hall-of-fame" }
     ]
   },
   {
@@ -33,6 +32,13 @@ const navItems = [
     items: [
       { title: "Our Sponsors", href: "#sponsors" },
       { title: "Become a Sponsor", href: "/become-sponsor" }
+    ]
+  },
+  {
+    title: "Hall of Fame",
+    items: [
+      { title: "View Hall of Fame", href: "/hall-of-fame" },
+      { title: "Submit Nomination", href: "/hall-of-fame-nomination" }
     ]
   }
 ];
