Update Joe Baxter's link in Hall of Fame page

--- a/src/pages/hall-of-fame.astro
+++ b/src/pages/hall-of-fame.astro
@@ -5,7 +5,7 @@ const hallOfFameMembers = [
   {
     name: "Joe Baxter",
     district: "Franklin County Schools",
-    link: "https://www.tapt.org/joe-baxter-hof"
+    link: "/joe-baxter-hof"  // Updated link
   },
   {
     name: "Norman Dailey",
