--- a/src/components/EventsSection.astro
+++ b/src/components/EventsSection.astro
@@ -16,7 +16,7 @@ const events = [
     date: "April-May 2025",
     location: "Multiple Locations Across Tennessee",
     description: "Tennessee Pupil Transportation Sponsored Regional Luncheons provide opportunities for networking and professional development closer to home.",
-    link: "https://form.jotform.com/231857063742964",
+    link: "/luncheon-registration",
     linkText: "Register for a Luncheon",
     image: "https://static.wixstatic.com/media/307eed_0816f351d49243ec93a9a1e04b289c31~mv2.jpg/v1/fill/w_190,h_114,al_c,q_80,usm_0.66_1.00_0.01,enc_avif,quality_auto/2018%20Lunch%20%26%20Learn%20Logo.jpg"
   },
