Update resource links in header

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -23,13 +23,13 @@ const navItems = [
     title: "Resources",
     items: [
       { title: "School Districts", href: "/school-districts" },
-      { title: "CDL Information", href: "/cdl-information" },
-      { title: "Conference Agenda", href: "/conference-agenda" },
-      { title: "House Recognition", href: "/house-recognition" },
-      { title: "Featured District", href: "/featured-district" },
-      { title: "Vehicle Grant Program", href: "/vehicle-grants" },
-      { title: "New 2-C Form", href: "/2c-form" },
-      { title: "Scholarship Application", href: "/scholarship" }
+      { title: "CDL Information", href: "https://digitaltennessee.tnsos.gov/comm_driver_license_manual/1/" },
+      { title: "Conference Agenda", href: "https://www.tapt.org/%5Ffiles/ugd/307eed%5F36591c88a0d2410ca280e16fb2737f68.pdf" },
+      { title: "House Recognition", href: "https://www.capitol.tn.gov/Bills/114/Bill/HJR0055.pdf" },
+      { title: "Featured District", href: "https://www.cmcss.net/operations/" },
+      { title: "Vehicle Grant Program", href: "https://www.tn.gov/environment/program-areas/energy/state-energy-office--seo-/programs-projects/programs-and-projects/sustainable-transportation-and-alternative-fuels/sustainable-transportation-and-alternative-fuels/tennessee-and-the-volkswagen-diesel-settlement1/project-solicitations/medium--and-heavy-duty-vehicles-grant-program.html" },
+      { title: "New 2-C Form", href: "https://www.tapt.org/new-form-post" },
+      { title: "Scholarship Application", href: "https://form.jotform.com/240316328016952" }
     ]
   },
   {
