Convert Resources section to dropdown menu

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,7 @@ import Layout from '../layouts/Layout.astro';
 import Hero from '../components/Hero.astro';
 import Mission from '../components/Mission.astro';
 import EventsSection from '../components/EventsSection.astro';
+import ResourcesSection from '../components/ResourcesSection.astro';
 import SponsorsSection from '../components/SponsorsSection.astro';
 import ContactSection from '../components/ContactSection.astro';
 ---
@@ -11,6 +12,7 @@ import ContactSection from '../components/ContactSection.astro';
   <Hero />
   <Mission />
   <EventsSection />
+  <ResourcesSection />
   <SponsorsSection />
   <ContactSection />
   
