Update remaining components to use local images

--- a/src/components/ContactSection.astro
+++ b/src/components/ContactSection.astro
@@ -4,13 +4,13 @@ const contacts = [
     name: "Dawn Cox",
     title: "TAPT REGION 6 DIRECTOR",
     email: "coxd@loudoncounty.org",
-    image: "https://static.wixstatic.com/media/307eed_30e9f195dcc84405aca25f0a718e9a69~mv2.png/v1/fill/w_198,h_344,al_c,q_85,usm_0.66_1.00_0.01,enc_avif,quality_auto/BRADFORD%20%26%20COX_bmp.png"
+    image: "/images/contacts/dawn-cox.png"
   },
   {
     name: "Dewayne Ferrell",
     title: "TAPT REGION 3 DIRECTOR",
     email: "dewayne.ferrell@mnps.org",
-    image: "https://static.wixstatic.com/media/307eed_772c0fcc833640299be304ffc085ccd8~mv2.jpg/v1/fill/w_312,h_311,al_c,lg_1,q_80,enc_avif,quality_auto/Dewayne%20Ferrell%20-%20Crop.jpg"
+    image: "/images/contacts/dewayne-ferrell.jpg"
   }
 ];
 ---
