--- a/src/components/SponsorsSection.astro
+++ b/src/components/SponsorsSection.astro
@@ -3,19 +3,19 @@ const sponsors = [
   {
     name: "Central States Bus Sales",
     description: "Blue Bird Bus Company",
-    logo: "https://static.wixstatic.com/media/307eed_b4b8f4868c2c4a8386bffe5a1ba9685f~mv2.jpg/v1/fill/w_271,h_211,al_c,q_80,usm_0.66_1.00_0.01,enc_avif,quality_auto/Blue%20Bird%20Logo.jpg",
+    logo: "/images/sponsors/blue-bird.jpg",
     website: "https://www.centralstatesbus.com/"
   },
   {
     name: "Cumberland IC Bus",
     description: "International IC Bus",
-    logo: "https://static.wixstatic.com/media/307eed_0dd43a24fec04a7995daa7e5bbd9404f~mv2.jpg/v1/fill/w_275,h_223,al_c,q_80,usm_0.66_1.00_0.01,enc_avif,quality_auto/IC%20Bus%20Logo.jpg",
+    logo: "/images/sponsors/ic-bus.jpg",
     website: "https://cumberland-companies.com/ic-bus/"
   },
   {
     name: "Mid-South Bus Center",
     description: "Thomas Bus Company",
-    logo: "https://static.wixstatic.com/media/307eed_032de959c29c4cc5bf5bdac05316f1e9~mv2.png/v1/fill/w_275,h_228,al_c,q_85,usm_0.66_1.00_0.01,enc_avif,quality_auto/Thomas_Built_Buses-3496034165.png",
+    logo: "/images/sponsors/thomas-built.png",
     website: "https://www.thebuscenter.com/"
   }
 ];
@@ -23,17 +23,17 @@ const sponsors = [
 const associations = [
   {
     name: "National School Transportation Association",
-    logo: "https://static.wixstatic.com/media/307eed_6f56788601a24f688f6724ba886b11b7~mv2.png/v1/crop/x_0,y_0,w_179,h_54/fill/w_251,h_75,al_c,lg_1,q_85,enc_avif,quality_auto/307eed_6f56788601a24f688f6724ba886b11b7~mv2.png",
+    logo: "/images/sponsors/nsta-logo.png",
     website: "https://yellowbuses.org/"
   },
   {
     name: "National Association for Pupil Transportation",
-    logo: "https://static.wixstatic.com/media/307eed_ff451264d8f840c7b903da8894940bb9~mv2.png/v1/fill/w_308,h_101,al_c,q_85,usm_0.66_1.00_0.01,enc_avif,quality_auto/NAPT%20LOGO.png",
+    logo: "/images/sponsors/napt-logo.png",
     website: "https://www.napt.org/"
   },
   {
     name: "School Transportation News",
-    logo: "https://static.wixstatic.com/media/307eed_b0c0e37fb9fc43dabf20bb1bc6ab2ed5~mv2.png/v1/fill/w_409,h_121,al_c,lg_1,q_85,enc_avif,quality_auto/School%20Trans%20News.png",
+    logo: "/images/sponsors/stn-logo.png",
     website: "https://stnonline.com/"
   }
 ];
