Update Header navigation to include Hall of Fame links

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -24,7 +24,8 @@ const navItems = [
     items: [
       { title: "School Districts", href: "/school-districts" },
       { title: "CDL Information", href: "https://digitaltennessee.tnsos.gov/comm_driver_license_manual/1/" },
-      { title: "Forms & Documents", href: "#forms" }
+      { title: "Forms & Documents", href: "#forms" },
+      { title: "Hall of Fame Nomination", href: "/hall-of-fame-nomination" }
     ]
   },
   {
