Update Header navigation to include Hall of Fame dropdown

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -7,8 +7,7 @@ const navItems = [
     items: [
       { title: "Mission", href: "#mission" },
       { title: "Board of Directors", href: "/board" },
-      { title: "Advisory Board", href: "/advisory-board" },
-      { title: "Hall of Fame", href: "/hall-of-fame" }
+      { title: "Advisory Board", href: "/advisory-board" }
     ]
   },
   {
@@ -20,12 +19,18 @@ const navItems = [
     ]
   },
   {
+    title: "Hall of Fame",
+    items: [
+      { title: "Members", href: "/hall-of-fame" },
+      { title: "Nominate", href: "/hall-of-fame-nomination" }
+    ]
+  },
+  {
     title: "Resources",
     items: [
       { title: "School Districts", href: "/school-districts" },
       { title: "CDL Information", href: "https://digitaltennessee.tnsos.gov/comm_driver_license_manual/1/" },
-      { title: "Forms & Documents", href: "#forms" },
-      { title: "Hall of Fame Nomination", href: "/hall-of-fame-nomination" }
+      { title: "Forms & Documents", href: "#forms" }
     ]
   },
   {
